# WorkClaw

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.en.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  WorkClaw_PRD.md  package.json  pnpm-lock.yaml  tmp-start-app.cmd  tmp-start-app.vbs
apps/runtime/src-tauri/: AGENTS.md  Cargo.toml  build.rs  tauri.conf.json
apps/runtime/src-tauri/builtin-skills/docx/: SKILL.md
apps/runtime/src-tauri/builtin-skills/employee-creator/: SKILL.md
apps/runtime/src-tauri/builtin-skills/find-skills/: SKILL.md
apps/runtime/src-tauri/builtin-skills/general-assistant/: SKILL.md
apps/runtime/src-tauri/builtin-skills/pdf/: SKILL.md
apps/runtime/src-tauri/builtin-skills/pptx/: SKILL.md
apps/runtime/src-tauri/builtin-skills/skill-creator/: SKILL.md
apps/runtime/src-tauri/builtin-skills/skill-creator-guide/: SKILL.md
apps/runtime/src-tauri/builtin-skills/xlsx/: SKILL.md
apps/runtime/src-tauri/capabilities/: default.json
apps/runtime/src-tauri/examples/: agent_eval.rs  employee_group_real_regression.rs  employee_group_run_regression.rs  employee_im_heavy_regression.rs
apps/runtime/src-tauri/icons/: icon.icns
apps/runtime/src-tauri/src/: approval_bus.rs  approval_rules.rs  branding_generated.rs  browser_bridge_callback.rs  builtin_skills.rs  db.rs  diagnostics.rs  lib.rs  model_errors.rs  model_transport.rs  runtime_bootstrap.rs  runtime_environment.rs  runtime_paths.rs  runtime_root_migration.rs  runtime_root_migration_tests.rs  session_journal.rs  sidecar.rs  windows_process.rs
apps/runtime/src-tauri/src/adapters/: anthropic.rs  attachment_support.rs  mod.rs  openai.rs
apps/runtime/src-tauri/src/agent/: approval_flow.rs  browser_progress.rs  compactor.rs  context.rs  event_bridge.rs  execution_caps.rs  executor.rs  file_task_preflight.rs  group_orchestrator.rs  mod.rs  path_access.rs  permissions.rs  registry.rs  run_guard.rs  skill_config.rs  tool_manifest.rs  types.rs  (+1 more)
apps/runtime/src-tauri/tests/: test_agent_profile_docs.rs  test_agent_reach_provider.rs  test_approval_bus.rs  test_bash.rs  test_bash_background.rs  test_browser_bridge_callback.rs  test_browser_bridge_install.rs  test_browser_compat.rs  test_browser_tools.rs  test_channel_connectors.rs  test_chat_attachment_platform.rs  test_chat_repo.rs  test_clawhub_library_cache.rs  test_clawhub_search.rs  test_compactor.rs  test_content_provider_commands.rs  test_content_provider_result.rs  test_content_provider_router.rs  test_context_trimming.rs  test_e2e_flow.rs  test_edit_tool.rs  test_employee_groups_db.rs  test_employee_id_model.rs  test_external_capability_commands.rs  test_feishu_adapter.rs  test_feishu_browser_setup.rs  test_feishu_browser_setup_binding.rs  test_feishu_callback_idempotency.rs  test_feishu_conversation_identity.rs  test_feishu_formatter.rs  test_feishu_gateway.rs  test_feishu_multi_employee_connections.rs  test_file_copy.rs  test_file_delete.rs  test_file_move.rs  test_im_binding_storage_cutover.rs  test_im_employee_agents.rs  test_im_event_contract.rs  test_im_host_windows_regressions.rs  test_im_memory_layers.rs  (+43 more)
(+947 files in other folders)
