[package]
name = "runtime"
version = "0.2.5"
edition = "2021"

[lib]
name = "runtime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
skillpack-rs = { path = "../../../packages/skillpack-rs" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "native-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
glob = "0.3"
regex = "1"
urlencoding = "2"
wait-timeout = "0.2"
walkdir = "2"
sha2 = "0.10"
zip = "0.6"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
