[package]
name = "runtime"
version = "0.6.1"
edition = "2021"
default-run = "runtime"

[features]
default = []
headless-evals = []

[lib]
name = "runtime_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "runtime"
path = "src/main.rs"

[[bin]]
name = "agent_eval"
path = "src/bin/agent_eval.rs"
required-features = ["headless-evals"]

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
async-trait = "0.1"
skillpack-rs = { path = "../../../packages/skillpack-rs" }
runtime-skill-core = { path = "../../../packages/runtime-skill-core" }
runtime-policy = { path = "../../../packages/runtime-policy" }
runtime-routing-core = { path = "../../../packages/runtime-routing-core" }
runtime-executor-core = { path = "../../../packages/runtime-executor-core" }
runtime-models-app = { path = "../../../packages/runtime-models-app" }
runtime-chat-app = { path = "../../../packages/runtime-chat-app" }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "native-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
base64 = "0.22"
pdf-extract = "0.10"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
glob = "0.3"
regex = "1"
urlencoding = "2"
wait-timeout = "0.2"
walkdir = "2"
sha2 = "0.10"
zip = "0.6"
tempfile = "3"

[dev-dependencies]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
